--- a/wiki/templates/wiki/base.html
+++ b/wiki/templates/wiki/base.html
@@ -33,10 +33,19 @@
     <div class="table-content">
         <div valign="top" class="left-chapters">
             <ul id="leftchapters">
-                <li class="selected">Все категории</li>
-                <li><a href="#">Корабли</a></li>
-                <li><a href="#">Такелаж</a></li>
-                <li><a href="#">Вооружение</a></li>
+                {% if cat_selected %}
+                    <li class="selected">Все категории</li>
+                {% else %}
+                    <li><a href="{% url 'home' %}">Все категории</a></li>
+                {% endif %}
+
+                {% for c in cats %}
+                    {% if c.pk == cat_selected %}
+                        <li class="selected">{{c.name}}</li>
+                    {% else %}
+                        <li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>
+                    {% endif %}
+                {% endfor %}
                 <li class="share">
                 </li>
             </ul>
