--- a/wiki/templates/wiki/base.html
+++ b/wiki/templates/wiki/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load wiki_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -32,20 +33,14 @@
 <div class="container">
     <div class="table-content">
         <div valign="top" class="left-chapters">
-            <ul id="leftchapters">
-                {% if cat_selected %}
-                    <li class="selected">Все категории</li>
-                {% else %}
-                    <li><a href="{% url 'home' %}">Все категории</a></li>
-                {% endif %}
 
-                {% for c in cats %}
-                    {% if c.pk == cat_selected %}
-                        <li class="selected">{{c.name}}</li>
-                    {% else %}
-                        <li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>
-                    {% endif %}
-                {% endfor %}
+            <ul id="leftchapters">
+            {% if cat_selected == 0 %}
+                <li class="selected">Все категории</li>
+            {% else %}
+                    <li><a href="{% url 'home' %}">Все категории</a></li>
+            {% endif %}
+            {% show_categories  cat_selected=cat_selected %}
                 <li class="share">
                 </li>
             </ul>
