--- a/wiki/static/wiki/css/styles.css
+++ b/wiki/static/wiki/css/styles.css
@@ -5,8 +5,7 @@ html, body{
 }
 
 body{
-    background-color: lightgrey;
-
+    background-color: #fff;
     display: flex;
     justify-content: center;
 }
