--- a/wiki/static/wiki/css/styles.css
+++ b/wiki/static/wiki/css/styles.css
@@ -1,7 +1,7 @@
 html, body{
     margin: 0;
     padding: 0;
-
+    font-family: Sans-serif, Arial, Tahoma;
 }
 
 body{
@@ -79,19 +79,25 @@ ul.list-articles li {
 .clear {clear: both;}
 
 .header {
-	background: #3F4137;
-	height: 60px;
+	background: #ddd;
+	height: 80px;
 	display: flex;
-	padding: 10px 10px;
+	padding: 10px 20px;
 }
 
 .logo-container{
-    width 60px;
+    width 80px;
 }
 
 .logo {
+	height: 80px;
+}
 
-	height: 60px;
+.mainmenu-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 ul.mainmenu {
@@ -112,11 +118,11 @@ ul.mainmenu li.logo {margin: 0;}
 ul.mainmenu li.last {float: right;}
 
 ul.mainmenu li a {
-	color: #fdc073;
+	color: #000;
 	text-decoration: none;
 }
 ul.mainmenu li a:hover {
-	color: #FDA83D;
+	color: #808080;
 }
 
 .panelitems {
@@ -193,7 +199,7 @@ div.button {
 	color: #444;
 	text-decoration: none;
 }
-.left-chapters ul li a:hover { color: #CC0000; }
+.left-chapters ul li a:hover { color: #808080; }
 .left-chapters ul li.share {margin: 60px 0 0 0;}
 .left-chapters ul li.share p {margin: 30px 0 30px 0;}
 .left-chapters ul li.share a {
@@ -224,7 +230,6 @@ ul.breadcrumbs {
 	padding: 0;
 	list-style: none;
 	font-size: 20px;
-	font-family: Sans-serif, Arial, Tahoma;
 }
 ul.breadcrumbs li {
 	display: inline-block;
@@ -244,7 +249,6 @@ ul.control {
 	margin: 0;
 	padding: 60px 0 0 0;
 	list-style: none;
-	font-family: Sans-serif, Arial, Tahoma;
 	font-size: 18px;
 	width: 100%;
 }
@@ -259,7 +263,6 @@ ul.content-table {
 	margin: 0;
 	padding: 60px 0 0 30px;
 	list-style: none;
-	font-family: Sans-serif, Arial, Tahoma;
 	font-size: 28px;
 }
 ul.content-table li {
@@ -272,10 +275,9 @@ ul.content-table li a {
 ul.content-table li a:hover {color: #F0711C;}
 
 .content-text {
-	margin: 60px 0 0 30px;
+	margin: 10px 0 0 30px;
 	color: #000;
 	font-size: 20px;
-	font-family: Yandex Sans Display Light;
 }
 .content-text h1 {font-size: 32px;}
 
@@ -289,7 +291,6 @@ ul.lang-list {
 	border-top: 1px solid #959A82;
 	box-sizing: border-box;
 	font-size: 18px;
-	font-family: Sans-serif, Arial, Tahoma;
 }
 ul.lang-list li {
 	display: inline-block;
@@ -314,12 +315,10 @@ ul.lang-list li a:hover {color: #fdc073;}
 	padding: 0 10px 0 10px;
 	margin-left: 30px;
 	background: #fff;
-	font-family: Sans-serif, Arial, Tahoma;
 }
 
 .list-topic {
 	margin: 40px 0 60px 0;
-	font-family: Sans-serif, Arial, Tahoma;
 }
 .list-topic p {
 	margin: 0;
@@ -359,7 +358,6 @@ ul.lang-list li a:hover {color: #fdc073;}
 .quote {
 	background: url('../images/blockquote.png') no-repeat 0 10px;
 	padding: 5px 5px 5px 70px;
-	font-family: Sans-serif, Arial, Tahoma;
 	font-style: italic;
 }
 
@@ -370,7 +368,6 @@ ul.lang-list li a:hover {color: #fdc073;}
 	padding: 5px;
 	color: #aaa;
 	font-size: 14px;
-	font-family: Verdana, Geneva, Arial, Helvetica;
 	overflow: hidden;
 }
 #footer a {
